Button 2: Fix issues with widget block centre alignments. Set line height when editing buttons.

--- a/button-2/blocks.css
+++ b/button-2/blocks.css
@@ -320,10 +320,25 @@ hr.wp-block-separator {
 5.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
+/* General Widget styles */
+
+.wp-block-categories.aligncenter,
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
+	list-style-position: inside;
+	text-align: center;
+}
+
+/* Latest Comments */
+
 .wp-block-latest-comments:not(.alignfull):not(.alignwide) {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+/* Latest Posts */
 
 .wp-block-latest-posts.is-grid {
 	margin: 0;
